# ducklake

./: .env.example  .gitignore  EMR_SERVERLESS_SETUP.md  README.md  bootstrap_ducklake.py  load_posthog_to_ducklake.py  pyproject.toml  setup_emr_serverless.sh  terraform.tfvars.example  terraform_iam_example.tf
.claude/: settings.local.json
.github/config/extensions/: postgres_scanner.cmake
.github/workflows/: Catalogs.yml  ConfigTests.yml  Debug.yml  DeletionVectors.yml  DuckLakeVersion.yml  MainDistributionPipeline.yml  MinIO.yml  NoInline.yml
scripts/: check_metadata_query_intent.py
src/functions/: ducklake_add_data_files.cpp  ducklake_flush_inlined_data.cpp
src/include/metadata_manager/: postgres_metadata_manager.hpp
src/include/storage/: ducklake_metadata_manager.hpp  ducklake_transaction.hpp  ducklake_transaction_changes.hpp
src/metadata_manager/: postgres_metadata_manager.cpp
src/storage/: ducklake_initializer.cpp  ducklake_metadata_manager.cpp  ducklake_transaction.cpp  ducklake_transaction_changes.cpp
test/configs/: postgres.json  sqlite.json
test/sql/data_inlining/: data_inlining_time_travel_reattach.test
test/sql/metadata/: postgres_metadata_passthrough.test
test/sql/transaction/: transaction_insert_alter_no_conflict.test  transaction_retry_stale_changes.test
